--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-playground",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "description": "",
   "keywords": [
     "n8n-community-node-package"
@@ -9,7 +9,7 @@
   "homepage": "",
   "author": {
     "name": "",
-    "email": ""
+    "email": "none@none.local"
   },
   "repository": {
     "type": "git",
